# precision-monoid-statistics

./: .gitignore  cabal.project  flow.hs  precision.cabal  shell.nix
hask/: cabal.project
hask/precision/: precision.cabal
hask/precision/exe/: flow-gen-prec.hs
hask/precision/src/Precision/: Def.hs  Flow.hs
nix/: overlay.nix
nix/haskell/: .gitignore  Makefile  config.10.yaml  packages.git.yaml  packages.yaml  repo.yaml
nix/haskell/ghc98/: config.10.yaml  config.20.yaml  packages.git.yaml  packages.yaml  repo.yaml
nix/haskell/ghc98/nix/: default.nix
nix/haskell/ghc98/nix/pkgs/haskell/: HDF5-direct.nix  HDF5-hl.nix  oka-flow.nix  oka-metadata.nix
nix/python/: okaflow.nix
notebook/: test.ipynb
src/Precision/: Def.hs  Flow.hs
