Cabal-Version:  3.0
Name:           precision
Version:        0.1
Synopsis:       Experiments with precision of estimators

common extensions
  Default-extensions: NoPolyKinds
                      --
                    , NoFieldSelectors
                    , OverloadedRecordDot
                    , DuplicateRecordFields
                      --
                    , DerivingVia
                    , LambdaCase
                    , TupleSections
                    , ViewPatterns
                    , MultiWayIf
                    , NumericUnderscores

                
Library
  import:           extensions
  Default-Language: GHC2021
  hs-source-dirs:   src
  
  Build-Depends:    base -any
                  , oka-flow
                  , oka-metadata
                  , HDF5-hl
                  , yaml
                  , random   >=1.2 && < 1.3
                  , directory
                  , filepath
                  , effectful-core
  Exposed-modules:
    Precision.Flow

