Cabal-Version:  3.0
Name:           precision
Version:        0.1
Synopsis:       Experiments with precision of estimators

common extensions
  Default-extensions: NoPolyKinds
                      --
                    , NoFieldSelectors
                    , OverloadedRecordDot
                    , DuplicateRecordFields
                      --
                    , DerivingVia
                    , LambdaCase
                    , TupleSections
                    , ViewPatterns
                    , MultiWayIf
                    , NumericUnderscores

                
Library
  import:           extensions
  Default-Language: GHC2021
  hs-source-dirs:   src
  -- FIXME: I need to pass python3 as dependency. Is there better way?
  pkgconfig-depends: python3-embed
  
  Build-Depends:    base -any
                  , oka-flow
                  , oka-metadata
                  , HDF5-hl
                  , yaml
                  , aeson
                  , inline-python
                  , random   >=1.2 && < 1.3
                  , directory
                  , filepath
                  , monoid-statistics
                  , mwc-random
                  , vector
                  , effectful-core
  Exposed-modules:
    Precision.Flow
    Precision.Def
